# usb-display-server

./: .gitignore  bmp.c  bmp.h  color_conversion.c  color_conversion.h  cpu_cycle_counter.h  image.h  k_means_compression.c  k_means_compression.h  main.c
common/: bmp.c  bmp.h  color_conversion.c  color_conversion.h  config.h  image.c  image.h  k_means_compression.c  k_means_compression.h
firmware/: .cproject  .project  .template  usb-screen.launch  usb-screen.wvproj
firmware/Ld/: Link.ld
firmware/Peripheral/src/: ch32x035_pwr.c
firmware/Startup/: startup_ch32x035.S
firmware/Systick/: systick.c  systick.h
firmware/User/: ch32x035_conf.h  ch32x035_it.c  ch32x035_usbfs_device.c  ch32x035_usbfs_device.h  lcd.c  lcd.h  main.c  system_hook.c  usb_desc.c  usb_desc.h
image/: MoutnRainier.md
linux/: main.c
linux/app/: CMakeLists.txt  usb_screen_client.c  usb_screen_client.h  usb_screen_play_video.c  usb_screen_rtmp.c  usb_screen_show_image.c
linux/server/: CMakeLists.txt  config.h  main.c  usb_screen.c  usb_screen.h
linux/test/: CMakeLists.txt  cpu_cycle_counter.c  cpu_cycle_counter.h  encode_frames_to_video.sh  test_compression.c  test_video.c
